apps/system/security/lldap/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  labels:
    app: lldap
spec:
  ports:
    - name: ldap
      port: 3890
      targetPort: ldap
      protocol: TCP
    - name: ldaps
      port: 636
      targetPort: ldaps
      protocol: TCP
    - name: http
      port: 17170
      targetPort: http
      protocol: TCP
  selector:
    app: lldap
