apps/system/security/lldap/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lldap-route
  namespace: security
spec:
  hostnames:
    - lldap.kerrlab.app
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  rules:
    - backendRefs:
        - name: lldap
          port: 17170
      matches:
        - path:
            type: PathPrefix
            value: /
